# secop

./: .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  README.md  secop.cpp
debian/: changelog  control  copyright  init.d  postinst  postrm  rules  secop.default  secop.service  watch.ex
jsoncpp/: CMakeLists.txt
python/: Secop.py  Secop3.py  test.py
src/: CMakeLists.txt  Crypto.cpp  Crypto.h  CryptoStorage.cpp  CryptoStorage.h  SecopServer.cpp  SecopServer.h
test/: CMakeLists.txt  TestCrypto.cpp  TestCrypto.h  TestCryptoStorage.cpp  TestCryptoStorage.h  test.cpp
